--- a/Yogi/flows.plist
+++ b/Yogi/flows.plist
@@ -6,7 +6,7 @@
 		<key>name</key>
 		<string>sun salutation a</string>
 		<key>color</key>
-		<string>red</string>
+		<string>redColor</string>
 		<key>image</key>
 		<string>sun a</string>
 	</dict>
@@ -14,7 +14,7 @@
 		<key>name</key>
 		<string>sun salutation b</string>
 		<key>color</key>
-		<string>red</string>
+		<string>redColor</string>
 		<key>image</key>
 		<string>sun b</string>
 	</dict>
@@ -22,7 +22,7 @@
 		<key>name</key>
 		<string>hand to toe pose</string>
 		<key>color</key>
-		<string>yellow</string>
+		<string>yellowColor</string>
 		<key>image</key>
 		<string>hand to toe</string>
 	</dict>
@@ -30,7 +30,7 @@
 		<key>name</key>
 		<string>warrior</string>
 		<key>color</key>
-		<string>orange</string>
+		<string>orangeColor</string>
 		<key>image</key>
 		<string>warrior i</string>
 	</dict>
@@ -38,7 +38,7 @@
 		<key>name</key>
 		<string>dandasana</string>
 		<key>color</key>
-		<string>blue</string>
+		<string>blueColor</string>
 		<key>image</key>
 		<string>dandasana</string>
 	</dict>
@@ -46,7 +46,7 @@
 		<key>name</key>
 		<string>bird of paradise </string>
 		<key>color</key>
-		<string>green</string>
+		<string>greenColor</string>
 		<key>image</key>
 		<string>bird of paradise</string>
 	</dict>
